--- a/Friday Challenge 1/calendar.html
+++ b/Friday Challenge 1/calendar.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Nedarbo Dienų Kalendorius (2023 m)</h1>
+    <h1>Nedarbo Dienų Kalendorius (2023)</h1>
     <br>
     <div class="background">
         <div class="kalendorius">
