--- a/Friday Challenge 3/landing page/index.html
+++ b/Friday Challenge 3/landing page/index.html
@@ -14,35 +14,38 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0"
     />
     <title>Landing Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <!-- Sematiniai elementai -->
     <!-- HTML5 -->
-    <header>
-      <div class="container d-flex">
-        <div class="logo">
-          <a href="#">
-            <img src="assets/img/logo-dark.png" alt="Landing page" />
-          </a>
+    <section id="navbar">
+      <header>
+        <div class="container d-flex">
+          <div class="logo">
+            <a href="#">
+              <img src="assets/img/logo-dark.png" alt="Landing page" />
+            </a>
+          </div>
+          <nav>
+            <ul>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#screenshots">Screenshot</a></li>
+              <li><a href="#testimonial">Testimonial</a></li>
+              <li><a href="#pricing">Pricing</a></li>
+              <li><a href="#contacts">Contact Us</a></li>
+            </ul>
+          </nav>
+          <div class="account">
+            <ul>
+              <li><a href="#">Login</a></li>
+              <li><a href="#" class="sign-up-link">Sign Up</a></li>
+            </ul>
+          </div>
         </div>
-        <nav>
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#screenshots">Screenshot</a></li>
-            <li><a href="#testimonial">Testimonial</a></li>
-            <li><a href="#pricing">Pricing</a></li>
-            <li><a href="#contacts">Contact Us</a></li>
-          </ul>
-        </nav>
-        <div class="account">
-          <ul>
-            <li><a href="#">Login</a></li>
-            <li><a href="#" class="sign-up-link">Sign Up</a></li>
-          </ul>
-        </div>
-      </div>
-    </header>
+      </header>
+  </section>
     <main>
       <section id="home">
         <div class="container d-flex">
@@ -672,5 +675,84 @@
           </div>
       </div>
     </section>
+
+    <!-- FOOTER -->
+    <section id="page-end">
+      <div class="container">
+        <div class="row">
+          <div class="left-appexy">
+            <div class="end-logo">
+              <a href="#"> <img src="../landing page/assets/img/logo-light.png" alt="end-logo"> </a>
+            </div>
+            <p id="p-first" >Hello@coderthemes.com</p>
+            <p>+01 ( 1234 567 890 )</p>
+            <h4>Follow Us</h4>
+            <ul class="end-icons-cont">
+              <li class="end-icons"> <i class="fa fa-facebook"></i></li>
+              <li class="end-icons"> <i class="fa fa-twitter"></i> </li>
+              <li class="end-icons"> <i class="fa fa-instagram"></i></li>
+              <li class="end-icons"> <i class="fa fa-skype"></i></li>
+            </ul>
+          </div>
+          <div class="right-appexy">
+            <div class="row">
+              <div class="end-right-column">
+                <h5 class="end-text end-title">About Us</h5>
+                <ul>
+                  <li class="end-text">Support Center</li>
+                  <li class="end-text">Customer Support</li>
+                  <li class="end-text">About Us</li>
+                  <li class="end-text">Copyright</li>
+                  <li class="end-text">Popular Campaign</li>
+                </ul>
+              </div>
+              <div class="end-right-column">
+                <h5 class="end-text end-title">Our Information</h5>
+                <ul>
+                  <li class="end-text">Return Policy</li>
+                  <li class="end-text">Privacy Policy</li>
+                  <li class="end-text">Terms & Conditions</li>
+                  <li class="end-text">Site Map</li>
+                  <li class="end-text">Store Hours</li>
+                </ul>
+              </div>
+              <div class="end-right-column">
+                <h5 class="end-text end-title">My Account</h5>
+                <ul>
+                  <li class="end-text">Press Inquiries</li>
+                  <li class="end-text">Social Media Directories</li>
+                  <li class="end-text">Images & B-roll</li>
+                  <li class="end-text">Permissions</li>
+                  <li class="end-text">Speaker Requests</li>
+                </ul>
+              </div>
+              <div class="end-right-column">
+                <h5 class="end-text end-title">Policy</h5>
+                <ul>
+                  <li class="end-text">Application Security</li>
+                  <li class="end-text">Softwere Principles</li>
+                  <li class="end-text">Unwanted Softwere Policy</li>
+                  <li class="end-text">Risponsible Supply Chain</li>
+                  <li class="end-text"></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="footer-cont">
+      <div class="container">
+        <div class="row">
+          <div class="footer-left">
+            <p>2023 © Appexy - Coderthemes.com</p>
+          </div>
+          <div class="footer-right">
+            <p>Terms Conditions & Policy</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
