#CSS Battle Tasks

--- a/Friday Challenge 2/css-battle-137.html
+++ b/Friday Challenge 2/css-battle-137.html
@@ -1,5 +1,5 @@
 <div class="top"></div>
-<div class="bot"></div>
+<div class="bott"></div>
 
 <style>
   * {
@@ -22,7 +22,7 @@
     border-top-left-radius: 100px;
   }
 
-  .bot {
+  .bott {
     width: 250px;
     height: 200px;
     background: #6592cf;
