--- a/Friday Challenge 5/index.html
+++ b/Friday Challenge 5/index.html
@@ -134,6 +134,7 @@
                 <h3>Instructions:</h3>
                 <p>${drink.strInstructions}</p>
             </nav>
+            <h3>Ingredients:</h3>
             ${ingredients}
 
             <nav class="next-new">
